<resources>
    <string name="PerformerApp_AppName">Delivery Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="PerformerApp_TaskFragment_ReserveButton">Reserve</string>
    <string name="PerformerApp_TaskFragment_InWorkButton">Take into work</string>
    <string name="PerformerApp_TaskFragment_PerformButton">Perform</string>
    <string name="PerformerApp_TaskFragment_CancelButton">Cancel</string>
    <string name="PerformerApp_LoginActivity_WrongCredentials">Invalid username/password</string>
    <string name="PerformerApp_LoginActivity_IncorrectRole">Incorrect role</string>
    <string name="PerformerApp_LoginActivity_SignInButton">Sign in</string>
    <string name="PerformerApp_LoginActivity_LoginLabel">Login</string>
    <string name="PerformerApp_LoginActivity_PasswordLabel">Password</string>
    <string name="PerformerApp_ConfirmDataActivity_ConfirmButton">Confirm</string>
    <string name="PerformerApp_ConfirmDataActivity_UnknownError">Unknown error</string>
    <string name="PerformerApp_ConfirmDataActivity_Surname">Surname</string>
    <string name="PerformerApp_ConfirmDataActivity_Name">Name</string>
    <string name="PerformerApp_ConfirmDataActivity_PhoneNumber">Phone number</string>
    <string name="PerformerApp_MainActivity_ManagerMenuItem">Managers</string>
    <string name="PerformerApp_MainActivity_PerformersMenuItem">Performers</string>
    <string name="PerformerApp_MainActivity_MyTasksMenuItem">My tasks</string>
    <string name="PerformerApp_MainActivity_UndistibutedTasksMenuItem">Und. tasks</string>
    <string name="PerformerApp_UsersListFragment_CallUserContentDescription">Call</string>
    <string name="PerformerApp_UsersListFragment_FullnameFormat" translatable="false">%s %s</string>
</resources>
