<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_managers"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/PerformerApp_MainActivity_ManagerMenuItem" />

    <item
        android:id="@+id/navigation_performers"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/PerformerApp_MainActivity_PerformersMenuItem" />

    <item
        android:id="@+id/navigation_my_tasks"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/PerformerApp_MainActivity_MyTasksMenuItem" />

    <item
        android:id="@+id/navigation_undistributed_tasks"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/PerformerApp_MainActivity_UndistibutedTasksMenuItem" />
</menu>